<resources>
    <string name="app_name">Instagram</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="trends">Trends</string>
    <string name="profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="trends_fragment">Trends Fragment</string>
    <string name="search_fragment">Search Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="add_fragment">Add Fragment</string>
    <string name="profile_image">profile image</string>
    <string name="prof_name">Yara Islam</string>
    <string name="pro_email">/@yaraaislam10</string>
    <string name="pro_des">hlwekgjngkla;okfldmlkhmldkmarl;m;lkm/g;okgmlkamdegklanr;lmg;gkj;lkgjre;lkjrag;joklfdz,mgnadkjgnrkn,dfernj</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="post_num">193</string>
    <string name="follower_num">587</string>
    <string name="following_num">426</string>
    <string name="posts">Posts</string>
    <string name="follower">Follower</string>
    <string name="following">Following</string>
    <string name="profile_name">yara_islam</string>
    <string name="add_comment">Add a comment</string>
    <string name="forget_password">Forget_password</string>
    <string name="sign_in">sign_in</string>
    <string name="or">OR</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="don_t_have_an_account">Don\'t have an account</string>
    <string name="sign_up">Sign_up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
</resources>
