<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".view.Fragments.ProfileFragment"
        android:scrollbarAlwaysDrawVerticalTrack="true">

        <de.hdodenhof.circleimageview.CircleImageView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/Guide_bottom"
            app:layout_constraintStart_toStartOf="@id/Guide_left"
            app:layout_constraintEnd_toEndOf="@id/Guide_right"
            android:layout_marginTop="8dp"
            android:id="@+id/profile_image"
            android:src="@drawable/profile"
            android:layout_width="wrap_content"
            android:layout_height="96dp"
            app:civ_border_width="0dp"
            app:civ_border_color="#000000" />

        <de.hdodenhof.circleimageview.CircleImageView
            app:layout_constraintBottom_toBottomOf="@id/profile_image"
            app:layout_constraintStart_toStartOf="@id/Guide_center"
            app:layout_constraintEnd_toEndOf="@id/Guide_right_img"
            android:id="@+id/add_image"
            android:src="@drawable/ic_add_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            app:civ_circle_background_color="#D32F2F"/>

        <TextView
            android:id="@+id/pro_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prof_name"
            android:textAppearance="@style/username"
            app:layout_constraintEnd_toEndOf="@id/Guide_right"
            app:layout_constraintStart_toStartOf="@id/Guide_left"
            app:layout_constraintTop_toTopOf="@id/Guide_bottom" />

        <TextView
            android:id="@+id/pro_at"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pro_email"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@id/Guide_right"
            app:layout_constraintStart_toStartOf="@id/Guide_left"
            app:layout_constraintTop_toBottomOf="@id/pro_name" />

        <TextView
            android:id="@+id/pro_des"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/pro_des"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@id/Guide_right2"
            app:layout_constraintStart_toStartOf="@id/Guide_left2"
            app:layout_constraintTop_toBottomOf="@id/pro_at" />

        <Button
            android:id="@+id/pro_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/back_white_button"
            android:text="@string/edit_profile"
            app:layout_constraintEnd_toEndOf="@id/Guide_right2"
            app:layout_constraintStart_toStartOf="@id/Guide_left2"
            app:layout_constraintTop_toBottomOf="@id/pro_des" />

        <TextView
            android:id="@+id/post_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_num"
            android:textAppearance="@style/numbers_profile"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/pro_button"
            app:layout_constraintStart_toStartOf="@id/Guide_left2" />

        <TextView
            android:id="@+id/post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/posts"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/post_num"
            app:layout_constraintStart_toStartOf="@id/Guide_left2" />

        <TextView
            android:id="@+id/follower_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/follower_num"
            android:textAppearance="@style/numbers_profile"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/pro_button"
            app:layout_constraintStart_toEndOf="@id/Guide_center"
            app:layout_constraintEnd_toStartOf="@id/Guide_center" />

        <TextView
            android:id="@+id/follower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/follower"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/follower_num"
            app:layout_constraintStart_toEndOf="@id/Guide_center"
            app:layout_constraintEnd_toStartOf="@id/Guide_center" />

        <TextView
            android:id="@+id/following_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/following_num"
            android:textAppearance="@style/numbers_profile"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/pro_button"
            app:layout_constraintEnd_toEndOf="@id/Guide_right"
            app:layout_constraintStart_toStartOf="@id/Guide_right" />

        <TextView
            android:id="@+id/following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/following"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/following_num"
            app:layout_constraintEnd_toEndOf="@id/Guide_right2" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/image_recycleview"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/following"
            app:layout_constraintStart_toStartOf="@id/Guide_right2"
            app:layout_constraintEnd_toEndOf="@id/Guide_left2"
            />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/Guide_left"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".15" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/Guide_right"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".85" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/Guide_left2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/Guide_right2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".95" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/Guide_center"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/Guide_bottom"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".15" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/Guide_left_img"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".275" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/Guide_right_img"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".725" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>